Working SQLite DB
can add courses
must manually check sqlite file

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,4 +24,6 @@
         </activity>
     </application>
 
+<!--    required to read SQLite files -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 </manifest>
