--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         android:theme="@style/Theme.FindMyClassmates"
         tools:targetApi="31">
         <activity
-            android:name=".signup"
-            android:exported="false" />
+            android:name=".SignupActivity"
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
