--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.findmyclassmates">
+    <!-- required to read SQLite files -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FindMyClassmates"
         tools:targetApi="31">
+        <activity
+            android:name=".TabbedFeatures"
+            android:exported="true" />
         <activity
             android:name=".signup"
             android:exported="false" />
@@ -30,6 +35,4 @@
         </activity>
     </application>
 
-<!--    required to read SQLite files -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 </manifest>
