--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:theme="@style/Theme.FindMyClassmates"
         tools:targetApi="31">
         <activity
-            android:name=".TabbedFeatures"
+            android:name=".activities.mainFeatures.TabbedFeatures"
             android:exported="true" />
         <activity
             android:name=".activities.SignupActivity"
