--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.mainFeatures.Roster"
+            android:exported="false" />
+        <activity
+            android:name=".activities.mainFeatures.ReviewsActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.mainFeatures.course_list"
             android:exported="false"
             android:label="@string/title_activity_course_list"
-            android:theme="@style/Theme.FindMyClassmates" />
-        <!-- tools:replace="android:appComponentFactory" -->
+            android:theme="@style/Theme.FindMyClassmates" /> <!-- tools:replace="android:appComponentFactory" -->
         <activity
             android:name=".activities.mainFeatures.TabbedFeatures"
             android:exported="true" />
