--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     namespace 'com.example.findmyclassmates'
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -42,10 +45,15 @@ dependencies {
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.test.ext:junit:1.1.5'
     implementation 'com.google.firebase:firebase-storage:20.3.0'
+    implementation 'androidx.navigation:navigation-fragment:2.5.3'
+    implementation 'androidx.navigation:navigation-ui:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'androidx.fragment:fragment:1.4.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.rengwuxian.materialedittext:library:2.1.4'
+    implementation 'com.karumi:dexter:6.2.2'
 }
