--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FindMyClassmates"
+        android:theme="@style/Theme.FindMyClassmatesDefault"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
