--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activities.mainFeatures.ViewProfile"
+            android:exported="false" />
+        <activity
             android:name=".activities.mainFeatures.MessageActivity"
             android:exported="true" />
         <activity
@@ -42,7 +45,7 @@
         </activity>
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
