--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.karumi:dexter:6.2.2'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.google.firebase:firebase-messaging:23.3.1'
 }
